k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posexei-web
  namespace: posexei
spec:
  selector:
    app: posexei-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
