k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posexei-ingress
  namespace: posexei
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: posexei.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: posexei-web
                port:
                  number: 80
